reformat and commented code